--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "1.0.0",
-  "description": "My Portfolio",
+  "description": "This is my personal portfolio, where I showcase some of my projects and skills.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/sazukeR/Portfolio#readme",
   "devDependencies": {
-    "hint": "^7.1.3",
+    "hint": "^7.1.4",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
